# efa

./: .gitignore  Cargo.toml  README.md
design/: bytecode.md  code-tool.md  database.md  interpreter.md  lists.md  memory-representation.md  references.md  translation.md
efa-compiler/: Cargo.toml
efa-core/: Cargo.toml  debug.sh  dis.asm  file.asm  notes.md  primes.py
efa-core/examples/: args.asm  array_2d.asm  array_map.asm  call.asm  comments.asm  compound_if.asm  cont_parse.asm  double.asm  fib.asm  isqrt.asm  jump_down.asm  labels.asm  lits.asm  loop.asm  main.asm  primes.asm  sum_squares.asm
efa-core/src/: bytecode.rs  lib.rs
efa-core/src/asm/: asm.rs  dis.rs  mod.rs  parser.rs
efa-core/src/cli/: commands.rs  run.rs
efa-core/src/db/: mod.rs
efa-core/src/solver/: mod.rs  node.rs  resolve_dyn.rs  toposort.rs
efa-core/src/vm/: mod.rs
vm/: Cargo.toml
vm/src/: bytecode.rs  lib.rs  vm.rs
