[package]
name = "efa-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
hex = "0.4.3"
rmp-serde = "1.3.0"
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.8"
rusqlite = { version = "0.33.0", features = ["bundled"] }
tempfile = "3.17.1"
rand = "0.9.0"
syn = "2.0.98"
